--- a/src/main.html
+++ b/src/main.html
@@ -1,32 +1,82 @@
-<script src="http://widgets.twimg.com/j/2/widget.js"></script>
-<script>
-new TWTR.Widget({
-  version: 2,
-  type: 'profile',
-  rpp: 4,
-  interval: 30000,
-  width: 250,
-  height: 300,
-  theme: {
-    shell: {
-      background: '#333333',
-      color: '#ffffff'
-    },
-    tweets: {
-      background: '#000000',
-      color: '#ffffff',
-      links: '#4aed05'
-    }
-  },
-  features: {
-    scrollbar: false,
-    loop: false,
-    live: false,
-    hashtags: true,
-    timestamp: true,
-    avatars: false,
-    behavior: 'all'
-  }
-}).render().setUser('newsycombinator').start();
-</script>
-<div>Recent Tweets</div>
+<link rel="stylesheet" href="../lib/bootstrap.css" type="text/css" />
+<link rel="stylesheet" href="main.css" type="text/css" />
+<div class='container'>
+  <div class="row">
+    <div class="col-sm-12">
+      <h4>Convershun</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h5>Url Params</h5>
+      <div class="form-group">
+        <label class="small" for="url">Full Url</label>
+        <input type="text" class="form-control" id="url" placeholder="http://example.com/?foo=bar">
+      </div>
+      <div class="url-output">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h5>Url Decode/Encode</h5>
+      <div class="form-group">
+        <label class="small" for="url-encode">Encode</label>
+        <input type="text" class="form-control" id="url-encode" placeholder="foo%20bar">
+      </div>
+      <div class="form-group">
+        <label class="small" for="url-decode">Decode</label>
+        <input type="text" class="form-control" id="url-decode" placeholder="foo bar">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h5>Base64 Decode/Encode</h5>
+      <div class="form-group">
+        <label class="small" for="b64-encode">Encode</label>
+        <input type="text" class="form-control" id="b64-encode" placeholder="foo%20bar">
+      </div>
+      <div class="form-group">
+        <label class="small" for="b64-decode">Decode</label>
+        <input type="text" class="form-control" id="b64-decode" placeholder="foo bar">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h5>Dates</h5>
+      <div class="form-group">
+        <label class="small" for="source-date">Date</label>
+        <input type="text" class="form-control" id="source-date" placeholder="foo%20bar">
+      </div>
+      <div class="form-group">
+        <label class="small" for="source-date-type">Source Type</label>
+        <select class="form-control" id="source-date-type">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label class="small" for="output-date-type">Output Type</label>
+        <select class="form-control" id="output-date-type">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+      </div>
+      <div class="date-output">
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="../lib/jquery.min.js" type="text/javascript"></script>
+<script src="../lib/moment.js" type="text/javascript"></script>
+<script src="../lib/uri-util.js" type="text/javascript"></script>
+<script src="main.js" type="text/javascript"></script>
