--- a/src/main.html
+++ b/src/main.html
@@ -21,12 +21,12 @@
     <div class="col-sm-12">
       <h5>Url Decode/Encode</h5>
       <div class="form-group">
-        <label class="small" for="url-encode">Encode</label>
-        <input type="text" class="form-control" id="url-encode" placeholder="foo%20bar">
+        <label class="small" for="url-decode">Decode</label>
+        <input type="text" class="form-control" id="url-decode" placeholder="foo%20bar">
       </div>
       <div class="form-group">
-        <label class="small" for="url-decode">Decode</label>
-        <input type="text" class="form-control" id="url-decode" placeholder="foo bar">
+        <label class="small" for="url-encode">Encode</label>
+        <input type="text" class="form-control" id="url-encode" placeholder="foo bar">
       </div>
     </div>
   </div>
@@ -34,13 +34,23 @@
     <div class="col-sm-12">
       <h5>Base64 Decode/Encode</h5>
       <div class="form-group">
-        <label class="small" for="b64-encode">Encode</label>
-        <input type="text" class="form-control" id="b64-encode" placeholder="foo%20bar">
+        <label class="small" for="b64-decode">Decode</label>
+        <input type="text" class="form-control" id="b64-decode" placeholder="Zm9vIGJhcg==">
       </div>
       <div class="form-group">
-        <label class="small" for="b64-decode">Decode</label>
-        <input type="text" class="form-control" id="b64-decode" placeholder="foo bar">
+        <label class="small" for="b64-encode">Encode</label>
+        <input type="text" class="form-control" id="b64-encode" placeholder="foo bar">
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h5>JSON Prettify</h5>
+      <div class="form-group">
+        <label class="small" for="json-data">JSON</label>
+        <textarea class="form-control" id="json-data" ></textarea>
+      </div>
+      <button class="btn btn-primary pretty-json" disabled>Prettify</button>
     </div>
   </div>
   <div class="row">
@@ -48,29 +58,17 @@
       <h5>Dates</h5>
       <div class="form-group">
         <label class="small" for="source-date">Date</label>
-        <input type="text" class="form-control" id="source-date" placeholder="foo%20bar">
-      </div>
-      <div class="form-group">
-        <label class="small" for="source-date-type">Source Type</label>
-        <select class="form-control" id="source-date-type">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label class="small" for="output-date-type">Output Type</label>
-        <select class="form-control" id="output-date-type">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
+        <input type="text" class="form-control" id="source-date" placeholder="1445699425">
       </div>
       <div class="date-output">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="form-group">
+        <label class="small" for="scratch-pad">Scratch Pad</label>
+        <textarea class="form-control" id="scratch-pad" ></textarea>
       </div>
     </div>
   </div>
@@ -78,5 +76,6 @@
 
 <script src="../lib/jquery.min.js" type="text/javascript"></script>
 <script src="../lib/moment.js" type="text/javascript"></script>
+<script src="../lib/lodash.js" type="text/javascript"></script>
 <script src="../lib/uri-util.js" type="text/javascript"></script>
 <script src="main.js" type="text/javascript"></script>
